--- a/hello-docker/Dockerfile
+++ b/hello-docker/Dockerfile
@@ -1,5 +1,19 @@
 FROM openjdk:8-jdk-alpine
+WORKDIR /app
+COPY mvnw  .
+COPY .mvn  .mvn
+COPY pom.xml  .
+RUN ./mvnw dependency:go-offilne -B
+COPY src src
+RUN ./mvnw package -DSkipTests
+RUN mkdir -p target/dependency && (cd target/dependecy; jar -xf ../*.jar)
+
+FROM openjdk:8-jre-alpine
+
+ARG DEPENDENCY=/app/target/dependency
+COPY --from=build ${DEPENDENCY}/BOOT_INF/lib /app/lib
+COPY --from=build ${DEPENDENCY}/META_INF  /app/META_INF
+COPY --from=build ${DEPENDENCY}/BOOT_INF/classes  /app
 VOLUME /tmp
-ADD target/hello-docker-0.0.1-SNAPSHOT.jar hello-docker-app.jar
 ENV JAVA_OPTS=""
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /hello-docker-app.jar" ]
+ENTRYPOINT ["java","-cp","app:app/lib/*","com.example.howtodoinjava.HelloDockerApplication"]
