--- a/pyshop/k8_deployments/pyshop-website.yaml
+++ b/pyshop/k8_deployments/pyshop-website.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
       - name: pyshop-website
         imagePullPolicy: Always
-        image: nkrsingh/myapps:pyshop-version1.0
+        image: nkrsingh/myapps:pyshop-1.0.0-snapshot
         ports:
         - containerPort: 8000
       imagePullSecrets:
